[package]
name = "house-price-predictor"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
aws-config = "1.5.15"
aws-sdk-s3 = "1.72.0"
polars = { version = "0.38.0", features = ["csv", "ndarray"] }
rand = "0.9.0"
reqwest = { version = "0.12.12", features = ["blocking"] }
tokio = { version = "1.43.0", features = ["full"] }
xgboost = "0.1.4"
